--- a/benefits/index.html
+++ b/benefits/index.html
@@ -11,6 +11,7 @@
     html,body{margin:0;font-family:'Noto Sans KR',Pretendard,Segoe UI,Roboto,sans-serif;background:#f6f8fc;color:var(--ink)}
     a{text-decoration:none;color:inherit}
 
+    /* 헤더 */
     header{background:linear-gradient(180deg,var(--brand1),var(--brand2));padding:18px 20px;color:#fff}
     .header-row{display:flex;align-items:center;gap:14px}
     .logo-eye{width:72px;aspect-ratio:1/1;overflow:hidden}
@@ -18,61 +19,114 @@
     .title-wrap h1{margin:0;font-size:26px;font-weight:900;letter-spacing:-.2px}
     .title-wrap p{margin:6px 0 0;font-size:14px;color:#eaf1ff;font-weight:600}
 
+    /* 본문 */
     .wrap{max-width:960px;margin:20px auto 100px;padding:0 16px}
-    .back{display:inline-flex;align-items:center;gap:8px;padding:10px 12px;border-radius:12px;background:#fff;border:1px solid #e8ecf5;box-shadow:var(--shadow)}
-    .back:hover{transform:translateY(-1px);transition:.15s ease}
-
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:16px}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:6px}
     .card{background:#fff;border:1px solid #e8ecf5;border-radius:16px;padding:18px;box-shadow:0 6px 16px rgba(0,0,0,.06)}
     .card h2{margin:0 0 8px;font-size:18px}
     .muted{color:#64748b;font-size:14px}
-    .btn{display:inline-block;margin-top:10px;padding:10px 14px;border-radius:10px;background:#2A7BF6;color:#fff}
+    .poster{margin-top:22px;border-radius:16px;overflow:hidden;box-shadow:0 10px 24px rgba(0,0,0,.08);border:1px solid #e8ecf5;background:#fff}
+    .poster img{width:100%;display:block}
 
-    footer{margin:26px 0 0;color:#64748b;font-size:12px}
+    /* 하단 탭 */
+    .tabbar{position:fixed;left:0;right:0;bottom:0;background:#fff;border-top:1px solid #e9eef6;
+      display:flex;justify-content:space-around;gap:6px;padding:10px 6px 12px;z-index:20}
+    .tab{display:flex;flex-direction:column;align-items:center;gap:6px;color:#4b5563;font-size:12px;cursor:pointer}
+    .tab.active{color:var(--brand2);font-weight:700}
+    .tab--img .ico{width:40px;height:40px;display:grid;place-items:center}
+    .tab--img .ico img{width:100%;height:100%;object-fit:contain;display:block;transition:transform .2s ease}
+    .tab--img:hover .ico img{transform:translateY(-2px)}
+    @keyframes spin{to{transform:rotate(360deg)}}
+    @keyframes spin-reverse{to{transform:rotate(-360deg)}}
+    .tab--home{margin-top:-26px}
+    .tab--home .bubble{position:relative;width:64px;height:64px;border-radius:50%;
+      background:conic-gradient(from 0deg,#82d1ff,#3b8cff,#0D56E2,#3b8cff,#82d1ff);
+      box-shadow:0 10px 18px rgba(0,0,0,.15);display:flex;align-items:center;justify-content:center;animation:spin 9s linear infinite}
+    .tab--home .bubble__icon{width:36px;height:36px;object-fit:contain;display:block;animation:spin-reverse 9s linear infinite}
+
+    @media(max-width:520px){
+      .logo-eye{width:64px}
+      .tab--img .ico{width:36px;height:36px}
+      .tab--home .bubble{width:58px;height:58px}
+      .tab--home .bubble__icon{width:32px;height:32px}
+    }
   </style>
 </head>
 <body>
+
   <header>
     <div class="header-row">
       <div class="logo-eye"><img src="/라이프온로고2.gif" alt="라이프온 로고"></div>
       <div class="title-wrap">
         <h1>조합원 혜택 안내</h1>
-        <p>비과세 · 금리우대 · 문화센터 · 제휴혜택</p>
+        <p>비과세 · 생일축하 금리우대 · 적립카드 · 여행숙박 · 문화센터 · 건강검진</p>
       </div>
     </div>
   </header>
 
   <main class="wrap">
-    <!-- 메인으로 돌아가기 (필요 없으면 이 블록 삭제) -->
-    <a class="back" href="/" aria-label="메인으로">
-      ← 메인으로
-    </a>
+    <!-- 요청: 화살표 '메인으로' 버튼 제거 -->
 
-    <section class="grid">
+    <!-- 혜택 카드들 (링크 없음) -->
+    <section class="grid" aria-label="조합원 혜택">
       <article class="card">
-        <h2>비과세/금리우대</h2>
-        <p class="muted">조합원 대상 상품에 비과세 혜택 및 금리 우대가 적용됩니다.</p>
+        <h2>비과세 혜택</h2>
+        <p class="muted">예적금 가입 시 1인당 3천만원 한도 내 비과세 적용으로 이자소득세 부담을 낮출 수 있어요.</p>
       </article>
 
       <article class="card">
-        <h2>문화센터 프로그램</h2>
-        <p class="muted">노래교실·라인댄스·요가·필라테스 등 지역 맞춤형 강좌 운영.</p>
-        <a class="btn" href="https://heyzine.com/flip-book/385aa0d3ef.html" target="_blank" rel="noopener">어부바플랜 보기</a>
+        <h2>생일축하 금리우대</h2>
+        <p class="muted">정기예탁금·정기적금에 생일축하 우대금리 적용(지점 정책에 따라 우대폭 상이).</p>
       </article>
 
       <article class="card">
-        <h2>건강검진/제휴 혜택</h2>
-        <p class="muted">지역 병원/상점과의 제휴를 통한 할인 및 포인트 적립 혜택.</p>
+        <h2>적립카드</h2>
+        <p class="muted">상품 및 어플 가입 시 적립 포인트 제공, 온누리상품권 등 교환 혜택(운영 기준에 따름).</p>
       </article>
 
       <article class="card">
-        <h2>라이프ON</h2>
-        <p class="muted">신협 생활 혜택을 한 곳에서 편하게.</p>
-        <a class="btn" href="https://ader.naver.com/v1/UOhPt58SgJTO6Az6nXutN0u2pPMjVvaXu89S5MEBUSFXO2v2h9-XfXuZyf32T-L2kHXPTc48V5OPXnjCzZSxs5imeVZ7aD7x4snY9t1UCyqV7T2nGdwtnuA3LnmbapeLjfopGmhijUWKBW7_0O5nV5gS2gNeL2V0BOvUAUfv7AtHRe6tLk5e3vycILZFjgkm-aqGgPvMlF0qZF7_m1UHqD2dGJ5m9VizeqjccsO3_DCj-E-2nV3e9VsBOZsAqq3Jt9N2yk9p2xOIoL2zAVKEJqDUDyVoTh6EvU24hiHFMdyRA3lZJNeiSZpdrT145QtX?c=mnaver.search.brand&t=0" target="_blank" rel="noopener">라이프ON 바로가기</a>
+        <h2>여행 숙박</h2>
+        <p class="muted">신협 제주 연수원 및 소노엔리조트 이용 가능(사전 예약 필요).</p>
+      </article>
+
+      <article class="card">
+        <h2>문화센터</h2>
+        <p class="muted">노래교실·라인댄스·요가·필라테스·캘리그라피 등 지역 맞춤형 강좌 수강 가능.</p>
+      </article>
+
+      <article class="card">
+        <h2>건강검진</h2>
+        <p class="muted">대구한의대한방병원 검진센터 이용 시 조합원 할인 혜택 제공.</p>
       </article>
     </section>
-
-    <footer>※ 실제 혜택 및 조건은 지점/상품에 따라 달라질 수 있습니다.</footer>
   </main>
+
+  <!-- 하단 탭 -->
+  <nav class="tabbar" aria-label="하단 바로가기">
+    <div class="tab tab--img" id="tab-onbank"><div class="ico"><img src="/온뱅크.png" alt="온뱅크"></div>온뱅크</div>
+    <div class="tab tab--img" id="tab-lifeon"><div class="ico"><img src="/라이프온.png" alt="라이프온"></div>라이프온</div>
+    <div class="tab tab--home active" id="tab-home"><div class="bubble"><img class="bubble__icon" src="/홈.png" alt="메인화면"></div>메인화면</div>
+    <div class="tab tab--img" id="tab-reon"><div class="ico"><img src="/리온브랜치.png" alt="리온브랜치"></div>리온브랜치</div>
+    <div class="tab tab--img" id="tab-kakao"><div class="ico"><img src="/카카오톡.png" alt="카카오톡"></div>카카오톡</div>
+  </nav>
+
+  <script>
+    // 탭 활성화
+    document.querySelectorAll('.tabbar .tab').forEach(tab=>{
+      tab.addEventListener('click', ()=>{
+        document.querySelectorAll('.tabbar .tab').forEach(t=>t.classList.remove('active'));
+        tab.classList.add('active');
+      });
+    });
+
+    // 외부 링크 & 메인 이동
+    const openLink=url=>window.location.href=url;
+    document.getElementById('tab-onbank')?.addEventListener('click',()=>openLink('https://ader.naver.com/v1/caL2Vp7db-KjGWa1VwH31E0TWLiyqkxUAEGlcU6Tq2FIV-pwfJZhwjIOqG7Xnb-8VVeSsiDME1Y3U8rgGLvmjMdBd95iES7QlhZa5M8-VwVwpXiPzyGBQSjNz70Q_-aWQ1mgZOIlsQvMR4x3Xdyae9MWlj8XWvJ-ec8u7BG4nCHLcuRUmaN08XZiwXozGgN4gdVypOaSfi01MJJbTIWnthV15P-WUpRbHMOBQndc5dUHe0NyxjkOC0TD-BdK7uvrSk5U9p2SGkoQZ4a7lzx4yYzqPBlVPL7Q2oCFXhhtaor63AhNW8_AL5Em8sWLp-aEs6uz7cZX2sgaGURv1yvmxw==?c=mnaver.search.brand&t=0'));
+    document.getElementById('tab-lifeon')?.addEventListener('click',()=>openLink('https://ader.naver.com/v1/UOhPt58SgJTO6Az6nXutN0u2pPMjVvaXu89S5MEBUSFXO2v2h9-XfXuZyf32T-L2kHXPTc48V5OPXnjCzZSxs5imeVZ7aD7x4snY9t1UCyqV7T2nGdwtnuA3LnmbapeLjfopGmhijUWKBW7_0O5nV5gS2gNeL2V0BOvUAUfv7AtHRe6tLk5e3vycILZFjgkm-aqGgPvMlF0qZF7_m1UHqD2dGJ5m9VizeqjccsO3_DCj-E-2nV3e9VsBOZsAqq3Jt9N2yk9p2xOIoL2zAVKEJqDUDyVoTh6EvU24hiHFMdyRA3lZJNeiSZpdrT145QtX?c=mnaver.search.brand&t=0'));
+    document.getElementById('tab-reon')?.addEventListener('click',()=>openLink('https://m.cu.co.kr/mbranch/mai/MAI010001U'));
+    document.getElementById('tab-kakao')?.addEventListener('click',()=>openLink('http://pf.kakao.com/_dIxgms'));
+    document.getElementById('tab-home')?.addEventListener('click',()=>openLink('/')); // 메인화면으로 이동
+  </script>
+
 </body>
 </html>
