--- a/benefits/index.html
+++ b/benefits/index.html
@@ -59,7 +59,7 @@
       <div class="logo-eye"><img src="/라이프온로고2.gif" alt="라이프온 로고"></div>
       <div class="title-wrap">
         <h1>조합원 혜택 안내</h1>
-        <p>비과세 · 생일축하 금리우대 · 적립카드 · 여행숙박 · 문화센터 · 건강검진</p>
+        <p>비과세·금리우대·문화센터·건강검진 등 조합원 전용</p>
       </div>
     </div>
   </header>
